<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- TITLE -->
    <string name="title_app">DeepAnse</string>
    <string name="title_home">Menu principal</string>
    <string name="title_create_deepanse">Création</string>
    <string name="title_by_year">Liste par année</string>
    <string name="title_by_month">Liste par mois</string>
    <string name="title_by_day">Liste par jour</string>
    <string name="title_detailed_list">Liste détaillée</string>
    <string name="title_edit_deepanse">Edition</string>
    <string name="title_find_deepanse">Recherche</string>
    <string name="title_create_group">Création</string>
    <string name="title_edit_group">Edition</string>
    <string name="title_list_group">Liste</string>
    <string name="title_create_deepanse_tuto">Diction</string>
    <string name="title_import_deepanse_group">Import</string>
    <string name="title_config">Configuration</string>

    <!-- HOME -->
    <string name="home_add_deepanse_by_voice">Dicter</string>
    <string name="home_add_deepanse_by_hand">Écrire</string>
    <string name="home_list_deepanse">Lister</string>
    <string name="home_add_group">Créer</string>
    <string name="home_find_deepanse">Rechercher</string>
    <string name="home_import_group">Glossaire</string>
    <string name="home_desc"><b>DeepAnse</b> vous permet, au quotidien, d\'enregistrer et de suivre simplement vos dépenses. Grâce à la <b>reconnaissance vocale de Google</b>, vous pouvez <b>dicter vos dépenses</b> en moins de 5 secondes ! Vous pouvez également les lister et les exporter par email.</string>
    <string name="home_deepanse">Gestion des dépenses</string>
    <string name="home_group">Gestion des catégories</string>
    <string name="home_help">Aide</string>
    <string name="home_first_launch">Guide de\ndémarrage</string>
    <string name="home_create_deepanse_tuto">Comment dicter\nune dépense</string>

    <!-- BUTTON -->
    <string name="cancel">Annuler</string>
    <string name="save">Enregistrer</string>
    <string name="again">Re-dicter</string>
    <string name="find">Rechercher</string>
    <string name="delete">Supprimer</string>
    <string name="imPort">Importer</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="ok">OK</string>
    <string name="today">Aujourd\'hui</string>
    <string name="tomorrow">Demain</string>
    <string name="yesterday">Hier</string>

    <!-- TEXTVIEW -->
    <string name="by_year">Par année</string>
    <string name="by_month">Par mois</string>
    <string name="by_day">Par jour</string>
    <string name="by_date">Par date</string>
    <string name="by_group">Par catégorie</string>
    <string name="by_amount">Par montant</string>
    <string name="by_comment">Par commentaire</string>
    <string name="date">Date</string>
    <string name="group">Catégorie</string>
    <string name="amount">Montant</string>
    <string name="comment">Commentaire</string>
    <string name="name">Nom</string>
    <string name="color">Couleur</string>
    <string name="saturation">Saturation</string>
    <string name="total">Total</string>
    <string name="google_full_text">Text brut retourné par Google :</string>
    <string name="deepanse_reduce_text">Text corrigé par l\'application :</string>
    <string name="read_example">Lire l\'exemple</string>
    <string name="deepanse_not_recognized"><b>Aucune dépense reconnue !</b>\n\nSi vous voulez plus d\'informations sur comment saisir correctement une dépense, jetez un coup d\'oeil à la rubrique \"<b>Aide</b>\" du menu principal.</string>
    <string name="email">Email :</string>
    <string name="default_mail">Email par défaut\n(pour l\'export) :</string>

    <!-- TOAST -->
    <string name="toast_inserted_deepense">Nouvelle dépense enregistrée.</string>
    <string name="toast_inserted_group">Nouvelle catégorie enregistrée.</string>
    <string name="toast_updated_deepense">Dépense modifiée.</string>
    <string name="toast_updated_group">Catégorie modifiée.</string>
    <string name="toast_deleted_deepense">Dépense supprimée.</string>
    <string name="toast_deleted_group">Catégorie supprimée.</string>
    <string name="toast_no_result">Aucun résultat.</string>
    <string name="toast_anim_add_group">Dans un premier temps, créez vos propres catégories.</string>
    <string name="toast_anim_list_group">Vous pouvez éditer vos catégories à tout moment.</string>
    <string name="toast_anim_import_group">Si vous ne savez pas quoi créer comme catégorie, jettez un oeil au \"Glossaire\"</string>
    <string name="toast_anim_add_deepanse_by_hand">Ensuite ajoutez des dépenses soit en remplissant les champs manuellement …</string>
    <string name="toast_anim_add_deepanse_by_voice">… soit en dictant la date, la catégorie, le commentaire et le montant (seul ce dernier est obligatoire).</string>
    <string name="toast_anim_list_deepanse">Vous pouvez éditer vos dépenses à tout moment.</string>
    <string name="toast_anim_find_deepanse">Enfin vous pouvez effectuer des recherches plus poussées.</string>
    <string name="toast_more_help">Pour plus d\'infos sur chaque fonctionnalité, consultez la catégorie \"Aide\".</string>
    <string name="toast_create_deepanse_sound_1">Pour dicter une dépense, vous devez saisir à l\'oral 4 éléments.</string>
    <string name="toast_create_deepanse_sound_2">la DATE : par ex demain, hier, mardi prochain ou 14 février 2015.</string>
    <string name="toast_create_deepanse_sound_3">la CATEGORIE qu\'il faudra créer et personnaliser avant.</string>
    <string name="toast_create_deepanse_sound_4">le MONTANT : par ex 15€30, 12 40 ou 50€.</string>
    <string name="toast_create_deepanse_sound_5">l\'INTITULE : vous pouvez dire ce que vous voulez.</string>
    <string name="toast_create_deepanse_sound_6">Seul le montant est obligatoire, les autres éléments sont facultatifs.</string>
    <string name="toast_create_deepanse_sound_7">Prenons par exemple : hier travail 15.30€ déjeuner avec mes collègues.</string>
    <string name="toast_create_deepanse_sound_8">Chaque élément a bien été retrouvé.</string>
    <string name="toast_need_amount">Un montant doit être saisi.</string>
    <string name="toast_need_name">Un nom doit être saisi.</string>
    <string name="toast_no_edit_possible">Impossible de modifier la catégorie par défaut.</string>
    <string name="toast_group_already_exist">Cette catégorie existe déjà !</string>
    <string name="toast_start_playing">Lecture en cours</string>
    <string name="toast_need_fast_connection">Pour cette fonctionnalité vous devez être en Wifi ou en 4G.</string>
    <string name="toast_group_imported">Catégories importées.</string>
    <string name="toast_no_group_selected">Aucune catégorie n\'a été sélectionnée !</string>
    <string name="toast_no_import_possible">Toutes les catégories ont déjà été ajoutées !</string>
    <string name="toast_config_updated">Configuration mise à jour.</string>

    <!-- ALERTBOX -->
    <string name="prompt_create_deepanse">Dictez votre nouvelle dépense</string>
    <string name="prompt_del_deepanse">Voulez-vous vraiment supprimer cette dépense ?</string>
    <string name="prompt_del_group">Voulez-vous vraiment supprimer cette catégorie ? Toute dépense liée à cette catégorie sera transférée dans la catégorie par défaut.</string>
    <string name="prompt_first_launch">Bienvenue sur DeepAnse !\n\nPour profiter pleinement de toutes ses fonctionnalités, il est fortement conseillé de consulter la rubrique \"Aide\" avant toute chose !\n</string>
    <string name="prompt_set_default_email">Aucune adresse email par défaut n\'est enregistrée pour l\'envoi des exports. Veuillez la saisir dans le champ ci-dessous :</string>

    <!-- MENU -->
    <string name="menu_home">Retour au menu principal</string>
    <string name="menu_collapse">Réduire tous les groupes</string>
    <string name="menu_export">Exporter les données</string>
    <string name="menu_config">Configuration</string>

    <!-- CREATE DEEPANSE TUTO -->
    <string name="tuto_create_deepanse_0"><u>/!\\ Vous devez être en Wifi ou en 4G /!\\</u></string>
    <string name="tuto_create_deepanse_1">Pour enregistrer <b>une dépense</b>, vous pouvez dicter <b>4 informations :</b></string>
    <string name="tuto_create_deepanse_2"><u><b>La date (facultatif) :</b></u> par défaut, la date du jour est enregistrée. Vous pouvez dire : demain, après-demain, hier, avant-hier, samedi prochain, dimanche dernier ou encore une date précise telle que 14 février 2015.</string>
    <string name="tuto_create_deepanse_3"><u><b>La catégorie (facultatif) :</b></u> par défaut, toute dépense est catégorisé dans \"divers\". Toute autre catégorie doit être créée auparavant. Par exemple, si vous avez créé une catégorie <b>\"travail\"</b>, et que vous dîtes <b>\"travail\"</b>, alors votre dépense sera catégorisée dedans.</string>
    <string name="tuto_create_deepanse_4"><u><b>Le commentaire (facultatif) :</b></u> vous pouvez dire <b>ce que vous voulez</b>. Ce champs vous permet d\'ajouter quelques précisions sur votre dépense.</string>
    <string name="tuto_create_deepanse_5"><u><b>le montant (obligatoire) :</b></u> 15 euros, 15 euros 30, 20.50 euros … il est préférable d\'éviter le mot <b>\"centimes\"</b> il pourrait être pris en compte en tant que commentaire.</string>
    <string name="tuto_create_deepanse_6">Il n\'y a pas <b>d\'ordre particulier</b> de saisie, vous pouvez aussi bien dire <b>\"Hier nourriture 57 euros courses au supermarché\"</b> que <b>\"Courses au supermarché 57 euros hier nourriture\"</b>.</string>
    <string name="tuto_create_deepanse_7">Votre dictée doit être <b>rapide</b>, <b>claire</b> et <b>sans accroche</b>, sinon DeepAnse n\'arrivera pas à vous comprendre. Pensez à l\'avance à ce que vous voulez dicter.</string>
    <string name="tuto_create_deepanse_8">Voici quelques exemples de diction :</string>
    <string name="tuto_create_deepanse_9">Dépense de 15 € dans la catégorie \"Travail\" aujourd\'hui avec commentaire \"Déjeuner avec les collègues\" :</string>
    <string name="tuto_create_deepanse_10">Dépense de 27.30 € hier dans la catégorie \"Divers\" sans commentaire :</string>
    <string name="tuto_create_deepanse_11">Dépense du 15 février 2015 de 37.07 € dans la catégorie \"Divers\" avec commentaire \"Achat d\'une lampe\" :</string>
    <string name="tuto_create_deepanse_12">Dépense de 0.80 € dans la catégorie \"Parking\" sans commentaire</string>

    <!-- IMPORT GROUP -->
    <string-array name="import_group">
        <item>Santé</item>
        <item>Nourriture</item>
        <item>Voiture</item>
        <item>Cadeau</item>
        <item>Travail</item>
        <item>Professionnel</item>
        <item>Informatique</item>
        <item>Loisir</item>
        <item>Jeux</item>
        <item>Sport</item>
        <item>Restaurant</item>
        <item>Transport</item>
        <item>Facture</item>
        <item>Loyer</item>
    </string-array>

    <!-- EXPORT DEEPANSE -->
    <string name="export_text">Cher Utilisateur,\nVous trouverez en pièce jointe l\'export demandé trié :\n</string>
    <string name="export_full_text">Cher Utilisateur,\nVous trouverez en pièce jointe l\'export de toutes vos dépenses.</string>
    <string name="export_subject">[DeepAnse] Export créé le</string>
    <string name="export_signature">\n\nCordialement,\nL\'équipe DeepAnse</string>

</resources>
