<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@drawable/background">

    <ScrollView
        android:id="@+id/layout_scroll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:fadeScrollbars="false"
        android:padding="10dp"
        android:scrollbarStyle="outsideOverlay"
        android:layout_above="@+id/layout_buttons"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView style="@style/text_white"
                android:id="@+id/text_full"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="start|center_vertical"
                android:text="@string/google_full_text" />

            <EditText style="@style/edit_text"
                android:id="@+id/edit_full"
                android:textStyle="italic"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:inputType="textMultiLine" />

            <TextView style="@style/text_white"
                android:id="@+id/text_reduce"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:gravity="start|center_vertical"
                android:text="@string/deepanse_reduce_text" />

            <EditText style="@style/edit_text"
                android:id="@+id/edit_reduce"
                android:textStyle="italic"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:padding="10dp"
                android:inputType="textMultiLine" />

            <TextView style="@style/text_white"
                android:id="@+id/text_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:text="@string/deepanse_not_recognized"
                android:layout_marginTop="20dp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layout_date"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_marginTop="35dp"
                    android:layout_marginBottom="10dp">

                    <TextView style="@style/text_white"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1.3"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="start|center_vertical"
                        android:text="@string/date" />

                    <Button style="@style/spinner"
                        android:id="@+id/button_date_picker"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1.7" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_group"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">

                    <TextView style="@style/text_white"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1.3"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="start|center_vertical"
                        android:text="@string/group" />

                    <Spinner style="@style/spinner"
                        android:id="@+id/spinner_group"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1.7" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_amount"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">

                    <TextView style="@style/text_white"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1.3"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="start|center_vertical"
                        android:text="@string/amount" />

                    <EditText style="@style/edit_text"
                        android:id="@+id/edit_amount"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1.7"
                        android:padding="10dp"
                        android:inputType="numberDecimal"
                        android:ems="10" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_comment"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">

                    <TextView style="@style/text_white"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1.3"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="start|center_vertical"
                        android:text="@string/comment" />

                    <EditText style="@style/edit_text"
                        android:id="@+id/edit_comment"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1.7"
                        android:padding="10dp"
                        android:inputType="textMultiLine" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true">

        <Button style="@style/button"
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:onClick="eventCancel" />

        <Button style="@style/button"
            android:id="@+id/button_again"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/again"
            android:onClick="eventAgain" />

        <Button style="@style/button"
            android:id="@+id/button_save"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/save"
            android:onClick="eventSave" />
    </LinearLayout>
</RelativeLayout>